--- a/Update2.html
+++ b/Update2.html
@@ -1,12 +1,10 @@
 {
 "version": "2.1",
 "title": "𝙈𝙊𝘿𝘿𝙀𝘿 𝘽𝙔 𝙀𝙇𝙀𝘾𝙏𝙍𝘼 𝙊𝙋",
-"NewVersion": "2.1",
-"downloadLink": "https://t.me/fn_network_back",
-"changeLogMessage": "𝙇𝙚𝙩 𝙈𝙚 𝙄𝙣𝙩𝙧𝙤𝙙𝙪𝙘𝙚 𝙊𝙪𝙧 𝘾𝙝𝙖𝙣𝙣𝙚𝙡. 𝙒𝙚 𝘼𝙧𝙚 𝙁𝙞𝙧𝙨𝙩 𝙒𝙝𝙤 𝙁𝙤𝙪𝙣𝙙𝙚𝙙 𝙁𝙧𝙚𝙚 𝙄𝙣𝙩𝙚𝙧𝙣𝙚𝙩 𝙄𝙣 𝙄𝙣𝙙𝙞𝙖 𝙄𝙣 𝙒𝙝𝙤𝙡𝙚 𝙏𝙚𝙡𝙚𝙜𝙧𝙖𝙢. 𝙒𝙚 𝘼𝙧𝙚 𝙏𝙝𝙚 𝙁𝙞𝙧𝙨𝙩 𝙒𝙝𝙤 𝙁𝙤𝙪𝙣𝙙𝙚𝙙 𝘼𝙡𝙡 𝙎𝙣𝙞 𝙑𝙞 , 𝙅𝙞𝙤 , 𝘼𝙞𝙧𝙩𝙚𝙡 , 𝘼𝙣𝙙 𝙅𝙞𝙤 𝙐𝙙𝙥 𝘼𝙡𝙡 𝙁𝙤𝙪𝙣𝙙𝙚𝙙 𝘽𝙮 𝙐𝙨.
+"message": "𝙇𝙚𝙩 𝙈𝙚 𝙄𝙣𝙩𝙧𝙤𝙙𝙪𝙘𝙚 𝙊𝙪𝙧 𝘾𝙝𝙖𝙣𝙣𝙚𝙡. 𝙒𝙚 𝘼𝙧𝙚 𝙁𝙞𝙧𝙨𝙩 𝙒𝙝𝙤 𝙁𝙤𝙪𝙣𝙙𝙚𝙙 𝙁𝙧𝙚𝙚 𝙄𝙣𝙩𝙚𝙧𝙣𝙚𝙩 𝙄𝙣 𝙄𝙣𝙙𝙞𝙖 𝙄𝙣 𝙒𝙝𝙤𝙡𝙚 𝙏𝙚𝙡𝙚𝙜𝙧𝙖𝙢. 𝙒𝙚 𝘼𝙧𝙚 𝙏𝙝𝙚 𝙁𝙞𝙧𝙨𝙩 𝙒𝙝𝙤 𝙁𝙤𝙪𝙣𝙙𝙚𝙙 𝘼𝙡𝙡 𝙎𝙣𝙞 𝙑𝙞 , 𝙅𝙞𝙤 , 𝘼𝙞𝙧𝙩𝙚𝙡 , 𝘼𝙣𝙙 𝙅𝙞𝙤 𝙐𝙙𝙥 𝘼𝙡𝙡 𝙁𝙤𝙪𝙣𝙙𝙚𝙙 𝘽𝙮 𝙐𝙨.
 
 𝙏𝙝𝙖𝙣𝙠𝙔𝙤𝙪.",
-"negativebtn": "𝙁𝙉 𝙉𝙀𝙏𝙒𝙊𝙍𝙆",
-"positivebtn": "𝙊𝙆𝘼𝙔",
-"changelogTitle": "Changelogs"
+"negativeBtn": "𝙊𝙆𝘼𝙔",
+"positiveBtn": "𝙅𝙊𝙄𝙉 𝙏𝙀𝙇𝙀𝙂𝙍𝘼𝙈",
+"getLink": "https://t.me/fn_network_back"
 }
